--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+appsettings.json
+
+
 # Created by https://www.toptal.com/developers/gitignore/api/csharp,visualstudio
 # Edit at https://www.toptal.com/developers/gitignore?templates=csharp,visualstudio
 
